--- a/snake_and_ball_game.html
+++ b/snake_and_ball_game.html
@@ -41,7 +41,7 @@
 					</div>
 				</div>
 				<div id="middle">
-					<canvas id="playing_area" width=600 height=500></canvas>
+					<canvas id="playing_area" width=580 height=520></canvas>
 				</div>
 				<div id="last">
 					<div id="high_score_display">
@@ -66,6 +66,8 @@
 					</div>
 				</div>
 			</div>
+
+			<button id="start_game">START GAME</button>
 
 			<script src="snake_and_ball_game.js"></script>
 
