some unimportant things left

--- a/snake_and_ball_game.html
+++ b/snake_and_ball_game.html
@@ -68,6 +68,7 @@
 			</div>
 
 			<button id="start_game">START GAME</button>
+			<button id="pause">PAUSE</button>
 
 			<script src="snake_and_ball_game.js"></script>
 
