--- a/snake_and_ball_game.html
+++ b/snake_and_ball_game.html
@@ -48,7 +48,10 @@
 						<pre id="high_score_text">High Score</pre>
 						<pre id="high_score_score">0</pre>
 					</div>
-					<div id="blank_area"></div>
+					<div id="winner_name_display">
+						<pre id="winner_name_text">Name</pre>
+						<pre id="winner_name_name">-</pre>
+					</div>
 					<div id="controls">
 						<pre id="controls_text">Game Controls</pre>
 						<div id="top_arrow">
@@ -69,6 +72,7 @@
 
 			<button id="start_game">START GAME</button>
 			<button id="pause">PAUSE</button>
+			<button id="restart_game">RESTART GAME</button>
 
 			<script src="snake_and_ball_game.js"></script>
 
