--- a/snake_and_ball_game.html
+++ b/snake_and_ball_game.html
@@ -39,6 +39,13 @@
 						<pre id="your_score_text">Your Score</pre>
 						<pre id="your_score_score">0</pre>
 					</div>
+					<div id="blank"></div>
+					<div id="select_level">
+						<pre id="level_text">Select Level</pre>
+						<pre id="easy"><input type="radio" name="level" id="radio_easy" value="Easy" checked>Easy</pre>
+						<pre id="intermediate"><input type="radio" name="level" id="radio_intermediate" value="Intermediate">Intermediate</pre>
+						<pre id="hard"><input type="radio" name="level" id="radio_hard" value="Hard">Hard</pre>
+					</div>
 				</div>
 				<div id="middle">
 					<canvas id="playing_area" width=580 height=520></canvas>
